syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ivas1ly/gophkeeper/pkg/api/v1/auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  google.protobuf.Timestamp expiredAt = 3;
}

message RegisterResponse {
  string id = 1;
  string username = 2;
  string accessToken = 4;
  google.protobuf.Timestamp expiredAt = 5;
}